# symboliccpp

symbolic/: ChangeLog  README  TODO  compile.sh  generate.sh  getversion.awk  makearchives.sh  makeinclude.awk  makesrc.awk  output.sh
symbolic/headers/: multinomial.h  rational.h
symbolic/headers/symbolic/: functions.h  product.h
symbolic/lib/: CMakeLists.txt  Makefile.am  README  configure.ac
symbolic/tests/: match.cpp
